added initial unit/webmvc/integration tests, springdocs