@@ -5,11 +5,11 @@ import com.auth0.jwt.JWTVerifier;
 import com.auth0.jwt.algorithms.Algorithm;
 import com.auth0.jwt.interfaces.DecodedJWT;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 import spring.exception.JwtTokenException;
-import spring.security.model.UserDetailsImpl;
 
 import java.util.Arrays;
 import java.util.Date;
@@ -25,12 +25,12 @@ public class TokenProvider {
     @Value("${jwt.token.expired}")
     private long expireTime;
 
-    public String createToken(UserDetailsImpl jwtUser) {
+    public String createToken(Authentication authenticate) {
         Algorithm algorithm = Algorithm.HMAC256(secret.getBytes());
         return JWT.create()
-                .withSubject(jwtUser.getUsername())
+                .withSubject(authenticate.getName())
                 .withExpiresAt(new Date(System.currentTimeMillis() + expireTime))
-                .withClaim("roles", getRoleNamesFromAuthorities(jwtUser))
+                .withClaim("roles", getRoleNamesFromAuthorities(authenticate))
                 .sign(algorithm);
     }
 
@@ -42,15 +42,17 @@ public class TokenProvider {
         return verifier.verify(token);
     }
 
-    public List<String> getRoleNamesFromAuthorities(UserDetailsImpl user) {
-        return user.getAuthorities().stream()
+    public List<String> getRoleNamesFromAuthorities(Authentication authenticate) {
+        return authenticate.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<GrantedAuthority> getAuthoritiesFromToken(DecodedJWT decodedJWT) {
         String[] roles = decodedJWT.getClaim("roles").asArray(String.class);
-        return Arrays.stream(roles).map(SimpleGrantedAuthority::new).collect(Collectors.toList());
+        return Arrays.stream(roles)
+                .map(SimpleGrantedAuthority::new)
+                .collect(Collectors.toList());
     }
 
     private void authHeaderCheck(String authHeader) {
